# slipstream-rust

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/slipstream-client/: Cargo.toml
crates/slipstream-client/src/: client.rs  main.rs  net.rs  runtime.rs
crates/slipstream-client/src/dns/: path.rs  poll.rs  resolver.rs  response.rs
crates/slipstream-client/src/runtime/: path.rs  setup.rs
crates/slipstream-core/: Cargo.toml
crates/slipstream-core/src/: lib.rs  stream.rs
crates/slipstream-dns/: Cargo.toml
crates/slipstream-dns/src/: base32.rs  dns.rs  dots.rs  lib.rs
crates/slipstream-dns/tests/: vectors.rs
crates/slipstream-ffi/: Cargo.toml  build.rs
crates/slipstream-ffi/cc/: picotls_layout.c  slipstream_poll.c  slipstream_server_cc.c  wincompat_time.c
crates/slipstream-ffi/src/: lib.rs  picoquic.rs  runtime.rs
crates/slipstream-ffi/tests/: backpressure.rs
crates/slipstream-server/: Cargo.toml
crates/slipstream-server/src/: main.rs  server.rs
docs/: BUILD_WINDOWS.md  benchmarks.md  build.md  config.md  design.md  dns-codec.md  interop.md  picoquic-changes.md  protocol.md  usage.md
scripts/: build_picoquic.sh  gen_vectors.sh  repro_high_cpu.sh
scripts/bench/: run_c_c_10mb.sh  run_rust_rust_10mb.sh  run_rust_rust_mem.sh
scripts/interop/: run_local.sh  run_rust_client.sh  run_rust_rust.sh  run_rust_server.sh  udp_capture_proxy.py
tools/vector_gen/: README.md
