[workspace]
members = [
  "crates/slipstream-core",
  "crates/slipstream-dns",
  "crates/slipstream-ffi",
  "crates/slipstream-client",
  "crates/slipstream-server",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
