[package]
name = "slipstream-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings and runtime helpers for picoquic in Slipstream"
license = "Apache-2.0"
repository = "https://github.com/Mygod/slipstream-rust"
readme = "../../README.md"

[dependencies]
libc = "0.2"
slipstream-core = { path = "../slipstream-core" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Networking_WinSock"] }

[build-dependencies]
cc = "1"
